css/styles.css
@charset "utf-8";
/* CSS Document */

html,
body,
main,
section,
header,
nav,
footer {
  width: 100%;
}

body, select {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 16pt;
  line-height: 1.5;
}

body {
  position: relative;
  margin: 0;
  color: #333;
  background-color: #fdfdfd;
}

a {
  color: orange;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #3397db;
  text-decoration: none;
}

a img {
  border: none 0px #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 20px;
}

article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

main {
  background-color: #f3f3f3;
  min-height: 100%;
}

/* ====================== Navigation ====================== */
nav {
  width: 100%;
  background-color: #252831;
  text-align:center;
  display: flex;
  align-items: center;
  justify-content: center;
}

nav h1 {
  padding: 20px;
  margin: 0;
}

@media screen and (max-width: 359px) {
  nav h1 {
    font-size: 1.2em;
  }
}

@media screen and (min-width: 591px) {
  nav h1 {
    padding: 30px 20px;
  }
}

nav h1 a {
  color: #fff;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}

.breadcrumb {
  padding: 16px 24px;
  list-style: none;
  background-color: #eee;
  margin: 0;
  width: 100%;
}

/* Display list items side by side */
.breadcrumb li {
  display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
.breadcrumb li+li:before {
  padding: 8px;
  color: black;
  content: "›";
}

/* Add a color to all links inside the list */
.breadcrumb li a {
  color: #0275d8;
  text-decoration: none;
}

/* Add a color on mouse-over */
.breadcrumb li a:hover {
  color: #01447e;
  text-decoration: underline;
}


/* ====================== Map ====================== */
.map {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}


/* ====================== Restaurant Filtering ====================== */
.filter-options {
  width: 100%;
  background-color: #3397DB;
  align-items: center;
  padding: 5px 0;
}

.filter-options h2 {
  color: white;
  font-size: 1.2em;
  font-weight: normal;
  line-height: 1;
  margin: 10px 20px;
}

.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  height: 35px;
  letter-spacing: 0;
  margin: 5px 10px;
  padding: 0 10px;
  width: calc(100% - 2 * 10px);
}

/* ========================== Card Layout ======================== */
.card-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  margin: 0;
  padding: 10px;
  background-color: #f3f3f3;
  list-style: outside none none;
}

.card {
  width: 100%;
  background-color: white;
  margin: 5px 5px 10px;
  padding: 0;
  border-radius: 25px 5px;
  min-height: 380px;
  overflow: hidden;
  display: block;
}

@media screen and (min-width: 591px) {
  .card-container {
    padding: 20px;
  }

  .card {
    margin: 5px 5px 20px;
  }
}

/* ====================== Restaurant Listing ====================== */
.restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  max-width: 100%;
  min-height: 248px;
  min-width: 100%;
}

.restaurant h1 {
  color: #f18200;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 10px auto 10px;
  width: 80%;
  text-transform: uppercase;
}

.restaurant p,
.restaurant h1 {
  text-align: center;
}

.restaurant-address {
  border-bottom: 1px solid #eee;
  padding-bottom: 10px;
}

.restaurant p {
  margin: 0;
}

.restaurant a {
  background-color: #f18200;
  /* border-bottom: 3px solid #eee; */
  color: #fff;
  display: inline-block;
  /* margin: 15px 0 0;
  padding: 8px 30px 10px;*/
  margin: 5px;
  padding: 0;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  line-height: 48px;
  min-height: 48px;
  width: calc(100% - 2 * 5px);
  border-radius: 5px 5px 25px 5px;
}

/* ====================== Restaurant Details ====================== */
.inside header {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2000;
}

.inside .map-container {
  background: blue none repeat scroll 0 0;
  width: 100%;
  height: 300px;
}

.inside main {
  margin-top: 199px;
}

@media screen and (max-width: 359px) {
  .inside main {
    margin-top: 179px;
  }
}

@media screen and (min-width: 591px) {
  .inside main {
    margin-top: 171px;
  }
}

.inside .map {
  background-color: #ccc;
  height: 100%;
  width: 100%;
}

.restaurant-name {
  color: #f18200;
  font-size: 1.5em;
  font-weight: 200;
  letter-spacing: 0;
  text-transform: uppercase;
  line-height: 1.5em;
  padding: 10px 20px;
  margin-block-end: 0;
  text-align: center;
}

.restaurant-img {
  width: 100%;
  border-radius: 25px 5px 0 0;
}

.restaurant-cuisine {
  border-radius: 0 0 25px 5px;
  background-color: #333;
  color: #ddd;
  font-weight: 300;
  letter-spacing: 10px;
  padding: 5px 0;
  text-align: center;
  text-transform: uppercase;
  width: 100%;
  position: relative;
  top: -1px;
  z-index: 1000;
}

.inside .restaurant-address {
  margin: 10px;
}

.inside .restaurant-address p {
  margin: 0;
}

.inside .restaurant-hours {
  margin: 10px;
}

.restaurant-hours tr {
  vertical-align: top;
}

.restaurant-hours table {
  border: none;
  width: 100%;
}

.restaurant-hours td:nth-child(even) {
  text-align: right;
  /*
   * Where multiple time ranges are given, we want them to split on the commas.
   * At our chosen font size, 200px is a suitable width to ensure this.
   */
  width: 200px;
}

.restaurant-container h3 {
  color: #f58500;
  margin: 15px 0 5px;
}

.restaurant-container {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 10px;
  width: calc(100% - 2 * 10px);
  border-bottom: 1px solid #d9d9d9;
}

@media screen and (min-width: 591px) {
  .restaurant-container {
    padding: 20px;
    width: calc(100% - 2 * 20px);
  }
}

/* ====================== Restaurant Reviews ====================== */

.reviews-container {
  border-top: 1px solid #fff;
}

.reviews-container h2 {
  color: #f58500;
  font-size: 1.5em;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
  padding: 20px;
  margin: 0;
}

.reviews-list li p {
  margin: 0 0 10px;
}

.review-header {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #252831;
  color: #fdfdfd;
  font-size: 1.2em;
  padding: 10px 20px;
}

.review-name {
  flex-grow: 1;
}

.review-date {
  order: 10;
  font-size: 0.8em;
  font-variant: small-caps;
  width: 100%;
  text-align: right;
}

.review-rating {
  color: #f58500;
  flex-grow: 0;
}

@media screen and (min-width: 591px) {
  .review-rating {
    width: 20%;
  }

  .review-name,
  .review-date {
    width: 40%;
  }
}

.review-text {
  padding: 10px 15px;
}

/* ====================== Footer ====================== */
footer {
  background-color: #444;
  letter-spacing: 1px;
  text-align: center;
  text-transform: uppercase;
  padding: 25px 20px 25px;
  color: #aaa;
  box-sizing: border-box;
}

